# Functional-Music

./: .gitignore  CHANGELOG.md  Functional-Music.cabal  LICENSE.md  README.md
Data/: Music.hs
Data/Music/: Algebraic.hs  Instrument.hs  Signal.hs
Data/Music/Algebraic/: Chords.hs  Notes.hs  Scales.hs  Types.hs
Data/Music/Instrument/: Guitar.hs  Strings.hs  bass.hs
Data/Music/Signal/: Signal.hs
executable/: Executable.hs
test-suite/: TestSuite.hs
test-suite/Algebraic/: MusicalNotesTest.hs  NoteTest.hs
