name: Functional-Music
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Chris Lowen
synopsis: Music Exploration in Haskell - Algebraic and Physical
description:
    <https://github.com/lokilow/Functional-Music#readme>
category: Music
extra-source-files:
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/lokilow/Functional-Music

library
    exposed-modules:
        Data.Music
        Data.Music.Algebraic
        Data.Music.Instrument
        Data.Music.Signal
    other-modules:
        Data.Music.Algebraic.Types
    build-depends:
        base ==4.8.*
    default-language: Haskell2010
    ghc-options: -Wall

executable Functional-Music
    main-is: Executable.hs
    build-depends:
        base -any,
        Functional-Music -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

test-suite Functional-Music-test-suite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base -any,
        Functional-Music -any,
        tasty ==0.11.0.2,
        tasty-hspec ==1.1.2
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -threaded -Wall -Werror

